k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: foreman
  labels:
    app: foreman
    environment: development
